# Makefile.am for srcpd
# version: $Revision$
# last update: $Date$

SUBDIRS = src po m4 debian

EXTRA_DIST = AUTHORS COPYING TODO NEWS ChangeLog INSTALL DESIGN \
	README README.freebsd README.ibox README.selectrix  \
	PROGRAMMING-HOWTO srcpd.lsm rcsrcpd srcpd.spec config.rpath

dist_sysconf_DATA = srcpd.conf

dist_man_MANS = srcpd.8

ACLOCAL_AMFLAGS = -I m4
