dnl Process this file with autoconf to produce a configure script.
AC_INIT(srcpd.c)
AM_INIT_AUTOMAKE(srcpd, 2.0)

AC_PREFIX_DEFAULT(/usr/local) 

dnl AC_CONFIG_HEADER(config.h)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h malloc.h syslog.h unistd.h)
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

AC_MSG_CHECKING("which type of build")
AC_ARG_ENABLE(debug,
 [  --enable-debug             enable debug mode [default=no]],
 enable_debug=$enableval, enable_debug=no)
if test $enable_debug = yes; then
   CFLAGS="-g -Wall"
   CXXFLAGS="-g -Wall"
   AC_MSG_RESULT(debug)
else
   CFLAGS="-O2 -Wall"
   CXXFLAGS="-O2 -Wall"
   AC_MSG_RESULT(release)
fi

CXXFLAGS="$CXXFLAGS"

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_CHECK_HEADERS(errno.h pthread.h pwd.h sys/time.h signal.h termios.h)
AM_PATH_XML2(2.4.0, HAVE_XML2=yes, exit 1)

CFLAGS="${CFLAGS} ${XML_CFLAGS}"
LIBS="${LIBS} ${XML_LIBS}"

AC_C_CONST
AC_TYPE_PID_T
AC_HEADER_TIME
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(gettimeofday socket)
 
AC_MSG_CHECKING([whether to enable ipv6])
AC_DEFINE(ENABLE_IPV6, [], [Activate IP V6])
AC_ARG_ENABLE(ipv6, [ --enable-ipv6 enable IPv6 extensions],
[ case "$enableval" in
        no)
                AC_MSG_RESULT(no)
                ipv6=no
                ;;
        *)
                AC_MSG_RESULT(yes)
                ipv6=yes
                ;;
        esac ],
        AC_TRY_RUN([ /* AF_INET6 available check */
#include <sys/types.h>
#include <sys/socket.h>
main()
{
 if (socket(AF_INET6, SOCK_STREAM, 0) < 0)
   exit(1);
 else
   exit(0);
}
],
  AC_MSG_RESULT(yes)
  AC_DEFINE(ENABLE_IPV6)
  ipv6=yes,
  AC_MSG_RESULT(no)
  ipv6=no,
  AC_MSG_RESULT(no)
  ipv6=no
))

AC_OUTPUT(Makefile)

